Moved hu and plan to its place

--- a/scrum.html
+++ b/scrum.html
@@ -204,6 +204,160 @@
 				</div>
 			</section>
 
+		<!-- User stories -->
+		<section class="wrapper" id="historias">
+			<div class="inner">
+				<header class="special">
+					<h2>Historias de usuario</h2>
+					<p>En esta lista se encuentran las historias de usuario que se han realizado entre el equipo de desarrollo y el cliente. Se han estimado los puntos de historia realizando un Planning Poker entre los miembros del equipo, siguiendo la sucesión de Fibonacci hasta el 21. Cuanto más alto el número más largo es el proceso para implementarlo</p>
+				</header>
+					<section>
+						<div class="content">
+							<ul>
+							<li>Como administrador del sistema puedo autenticarme en el panel de administración  <p class="text-right">Prioridad: 1 - Puntos de historia: 3</p></li>
+							<li>Como administrador del sistema puedo crear una línea de autobús  <p class="text-right">Prioridad: 1 - Puntos de historia: 3</p></li>
+							<li>Como administrador del sistema puedo dar de alta un autobús  <p class="text-right">Prioridad: 1 - Puntos de historia: 2</p></li>
+							<li>Como administrador del sistema puedo dar de baja un autobús  <p class="text-right">Prioridad: 1 - Puntos de historia: 2</p></li>
+							<li>Como administrador del sistema puedo dar de alta una parada  <p class="text-right">Prioridad: 1 - Puntos de historia: 3</p></li>
+							<li>Como administrador del sistema puedo dar de baja una parada  <p class="text-right">Prioridad: 1 - Puntos de historia: 1</p></li>
+							<li>Como administrador del sistema puedo asociar un autobús a una línea de autobús  <p class="text-right">Prioridad: 1 - Puntos de historia: 2</p></li>
+							<li>Como administrador del sistema puedo asociar una parada a una línea de autobús  <p class="text-right">Prioridad: 1 - Puntos de historia: 2</p></li>
+							<li>Como administrador del sistema puedo desloguearme del panel de administración  <p class="text-right">Prioridad: 1 - Puntos de historia: 1</p></li>
+							<li>Como usuario puedo consultar las líneas de autobuses disponibles  <p class="text-right">Prioridad: 2 - Puntos de historia: 5</p></li>
+							<li>Como usuario puedo consultar la ubicación de un autobús  <p class="text-right">Prioridad: 1 - Puntos de historia: 21</p></li>
+							<li>Como usuario puedo consultar la ocupación de un autobús  <p class="text-right">Prioridad: 3 - Puntos de historia: 21</p></li>
+							<li>Como usuario quiero que el sistema me recomiende que autobús coger  <p class="text-right">Prioridad: 5 - Puntos de historia: 13</p></li>
+							<li>Como usuario puedo consultar el itinerario de una ruta  <p class="text-right">Prioridad: 3 - Puntos de historia: 5</p></li>
+							<li>Como usuario puedo consultar las paradas de autobús en el mapa  <p class="text-right">Prioridad: 2 - Puntos de historia: 8</p></li>
+							<li>Como usuario puedo ver el tiempo restante para que un autobús llegue a una parada  <p class="text-right">Prioridad: 3 - Puntos de historia: 8</p></li>
+							<li>Como usuario quiero que el sistema muestre mi posición actual en el mapa  <p class="text-right">Prioridad: 1 - Puntos de historia: 3</p></li>
+							<li>Como usuario quiero ver un mapa con los autobuses  <p class="text-right">Prioridad: 1 - Puntos de historia: 8</p></li>
+							<li>Como usuario quiero que el sistema calcule el tiempo restante desde mi posición a un objetivo marcado  <p class="text-right">Prioridad: 4 - Puntos de historia: 13</p></li>
+							</ul>
+						</div>
+					<header class="special">
+						<h2>División en historias más pequeñas y tareas</h2>
+						<p>Algunas historias de usuario son demasiado grandes para ser desarrolladas en un único sprint, por lo que se dividieron en historias o tareas mas pequeñas</p>
+					</header>
+				</section>
+			</div>
+		</section>
+
+		<!--Delivery Schedule-->
+		<section class="wrapper" id="plan">
+			<div class="inner">
+				<header class="special">
+					<h2>Plan de entregas</h2>
+					<h4>Duración: 9 semanas</h4>
+					<h4>Plan: 5 entregas</h4>
+					<h4>Comienzo: 01/02/2020</h4>
+					<p>En base al esfuerzo necesario y la velocidad estimada del equipo (20 puntos de historia/sprint), para el desarrollo del proyecto se van a realizar 9 sprints, realizando una entrega cada dos sprints, por lo que hay previstas 5 entregas.</p>
+					<p>El plan de entregas del producto es el siguiente:</p>
+				</header>
+				<div class="highlights">
+					<section>
+						<div class="content">
+							<header>
+								<h3>Entrega 1</h3>
+							</header>
+							<p>Infraestructura lista para las siguientes iteraciones</p>
+							<div class="it">
+								<header>
+									<h4>Iteración 1</h4>
+								</header>
+							<p>Base de datos y Prototipos</p>
+							</div>
+							<div class="it">
+								<header>
+									<h4>Iteración 2</h4>
+								</header>
+							<p>Infraestructura servidor y app</p>
+							</div>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<h3>Entrega 2</h3>
+							</header>
+							<p>Tener los sensores GPS listos para hacer pruebas con el servidor</p>
+							<div class="it">
+								<header>
+									<h4>Iteración 3</h4>
+								</header>
+							<p>Administración del sistema y desarrollo del Sensor GPS</p>
+							</div>
+							<div class="it">
+								<header>
+									<h4>Iteración 4</h4>
+								</header>
+							<p>Finalización sensor GPS y consulta de autobuses en mapa</p>
+							</div>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<h3>Entrega 3</h3>
+							</header>
+							<p>Incluir funcionalidades relacionadas con la ocupación de los autobuses</p>
+							<div class="it">
+								<header>
+									<h4>Iteración 5</h4>
+								</header>
+							<p>Desarrollo del sensor de pasajeros y consultas paradas y rutas en mapa</p>
+							</div>
+							<div class="it">
+								<header>
+									<h4>Iteración 6</h4>
+								</header>
+							<p>Finalización del sensor de pasajeros y consulta de ocupación de autobuses en tiempo real</p>
+							</div>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<h3>Entrega 4</h3>
+							</header>
+							<p>Incluir funcionalidades complejas y finalización del proyecto.</p>
+							<div class="it">
+								<header>
+									<h4>Iteración 7</h4>
+								</header>
+							<p>Desarrollo de los algoritmos de cálculo de tiempo y posición</p>
+							</div>
+							<div class="it">
+								<header>
+									<h4>Iteración 8</h4>
+								</header>
+							<p>Desarrollo de los algoritmos de recomendación de autobuses y de ruta. Finalización de la implementación.</p>
+							</div>
+						</div>
+					</section>
+					<section></section>
+					<section>
+						<div class="content">
+							<header>
+								<h3>Entrega 5</h3>
+							</header>
+							<p>Puesta en real de las aplicaciones móviles para Android y iOS</p>
+							<div class="it">
+								<header>
+									<h4>Iteración 9</h4>
+								</header>
+							<p>Compilación de aplicaciones móviles para iphone y Android.</p>
+							</div>
+							<div class="it">
+								<header>
+									<h4>Fecha de entrega final</h4>
+								</header>
+							<p>07/06/2021</p>
+							</div>
+						</div>
+					</section>
+				</div>
+
 			<!-- Highlights SPRINT 1-->
 			<section class="wrapper" id="sprint1">
 				<div class="inner">
@@ -367,160 +521,6 @@
 					</div>
 				</div>
 			</section>
-
-
-		<!-- User stories -->
-		<section class="wrapper" id="user-stories">
-			<div class="inner">
-				<header class="special">
-					<h2>Historias de usuario</h2>
-					<p>En esta lista se encuentran las historias de usuario que se han realizado entre el equipo de desarrollo y el cliente. Se han estimado los puntos de historia realizando un Planning Poker entre los miembros del equipo, siguiendo la sucesión de Fibonacci hasta el 21. Cuanto más alto el número más largo es el proceso para implementarlo</p>
-				</header>
-					<section>
-						<div class="content">
-							<ul>
-							<li>Como administrador del sistema puedo autenticarme en el panel de administración  <p class="text-right">Prioridad: 1 - Puntos de historia: 3</p></li>
-							<li>Como administrador del sistema puedo crear una línea de autobús  <p class="text-right">Prioridad: 1 - Puntos de historia: 3</p></li>
-							<li>Como administrador del sistema puedo dar de alta un autobús  <p class="text-right">Prioridad: 1 - Puntos de historia: 2</p></li>
-							<li>Como administrador del sistema puedo dar de baja un autobús  <p class="text-right">Prioridad: 1 - Puntos de historia: 2</p></li>
-							<li>Como administrador del sistema puedo dar de alta una parada  <p class="text-right">Prioridad: 1 - Puntos de historia: 3</p></li>
-							<li>Como administrador del sistema puedo dar de baja una parada  <p class="text-right">Prioridad: 1 - Puntos de historia: 1</p></li>
-							<li>Como administrador del sistema puedo asociar un autobús a una línea de autobús  <p class="text-right">Prioridad: 1 - Puntos de historia: 2</p></li>
-							<li>Como administrador del sistema puedo asociar una parada a una línea de autobús  <p class="text-right">Prioridad: 1 - Puntos de historia: 2</p></li>
-							<li>Como administrador del sistema puedo desloguearme del panel de administración  <p class="text-right">Prioridad: 1 - Puntos de historia: 1</p></li>
-							<li>Como usuario puedo consultar las líneas de autobuses disponibles  <p class="text-right">Prioridad: 2 - Puntos de historia: 5</p></li>
-							<li>Como usuario puedo consultar la ubicación de un autobús  <p class="text-right">Prioridad: 1 - Puntos de historia: 21</p></li>
-							<li>Como usuario puedo consultar la ocupación de un autobús  <p class="text-right">Prioridad: 3 - Puntos de historia: 21</p></li>
-							<li>Como usuario quiero que el sistema me recomiende que autobús coger  <p class="text-right">Prioridad: 5 - Puntos de historia: 13</p></li>
-							<li>Como usuario puedo consultar el itinerario de una ruta  <p class="text-right">Prioridad: 3 - Puntos de historia: 5</p></li>
-							<li>Como usuario puedo consultar las paradas de autobús en el mapa  <p class="text-right">Prioridad: 2 - Puntos de historia: 8</p></li>
-							<li>Como usuario puedo ver el tiempo restante para que un autobús llegue a una parada  <p class="text-right">Prioridad: 3 - Puntos de historia: 8</p></li>
-							<li>Como usuario quiero que el sistema muestre mi posición actual en el mapa  <p class="text-right">Prioridad: 1 - Puntos de historia: 3</p></li>
-							<li>Como usuario quiero ver un mapa con los autobuses  <p class="text-right">Prioridad: 1 - Puntos de historia: 8</p></li>
-							<li>Como usuario quiero que el sistema calcule el tiempo restante desde mi posición a un objetivo marcado  <p class="text-right">Prioridad: 4 - Puntos de historia: 13</p></li>
-							</ul>
-						</div>
-					<header class="special">
-						<h2>División en historias más pequeñas y tareas</h2>
-						<p>Algunas historias de usuario son demasiado grandes para ser desarrolladas en un único sprint, por lo que se dividieron en historias o tareas mas pequeñas</p>
-					</header>
-				</section>
-			</div>
-		</section>
-
-		<!--Delivery Schedule-->
-		<section class="wrapper" id="delivery">
-			<div class="inner">
-				<header class="special">
-					<h2>Plan de entregas</h2>
-					<h4>Duración: 9 semanas</h4>
-					<h4>Plan: 5 entregas</h4>
-					<h4>Comienzo: 01/02/2020</h4>
-					<p>En base al esfuerzo necesario y la velocidad estimada del equipo (20 puntos de historia/sprint), para el desarrollo del proyecto se van a realizar 9 sprints, realizando una entrega cada dos sprints, por lo que hay previstas 5 entregas.</p>
-					<p>El plan de entregas del producto es el siguiente:</p>
-				</header>
-				<div class="highlights">
-					<section>
-						<div class="content">
-							<header>
-								<h3>Entrega 1</h3>
-							</header>
-							<p>Infraestructura lista para las siguientes iteraciones</p>
-							<div class="it">
-								<header>
-									<h4>Iteración 1</h4>
-								</header>
-							<p>Base de datos y Prototipos</p>
-							</div>
-							<div class="it">
-								<header>
-									<h4>Iteración 2</h4>
-								</header>
-							<p>Infraestructura servidor y app</p>
-							</div>
-						</div>
-					</section>
-					<section>
-						<div class="content">
-							<header>
-								<h3>Entrega 2</h3>
-							</header>
-							<p>Tener los sensores GPS listos para hacer pruebas con el servidor</p>
-							<div class="it">
-								<header>
-									<h4>Iteración 3</h4>
-								</header>
-							<p>Administración del sistema y desarrollo del Sensor GPS</p>
-							</div>
-							<div class="it">
-								<header>
-									<h4>Iteración 4</h4>
-								</header>
-							<p>Finalización sensor GPS y consulta de autobuses en mapa</p>
-							</div>
-						</div>
-					</section>
-					<section>
-						<div class="content">
-							<header>
-								<h3>Entrega 3</h3>
-							</header>
-							<p>Incluir funcionalidades relacionadas con la ocupación de los autobuses</p>
-							<div class="it">
-								<header>
-									<h4>Iteración 5</h4>
-								</header>
-							<p>Desarrollo del sensor de pasajeros y consultas paradas y rutas en mapa</p>
-							</div>
-							<div class="it">
-								<header>
-									<h4>Iteración 6</h4>
-								</header>
-							<p>Finalización del sensor de pasajeros y consulta de ocupación de autobuses en tiempo real</p>
-							</div>
-						</div>
-					</section>
-					<section>
-						<div class="content">
-							<header>
-								<h3>Entrega 4</h3>
-							</header>
-							<p>Incluir funcionalidades complejas y finalización del proyecto.</p>
-							<div class="it">
-								<header>
-									<h4>Iteración 7</h4>
-								</header>
-							<p>Desarrollo de los algoritmos de cálculo de tiempo y posición</p>
-							</div>
-							<div class="it">
-								<header>
-									<h4>Iteración 8</h4>
-								</header>
-							<p>Desarrollo de los algoritmos de recomendación de autobuses y de ruta. Finalización de la implementación.</p>
-							</div>
-						</div>
-					</section>
-					<section>
-						<div class="content">
-							<header>
-								<h3>Entrega 5</h3>
-							</header>
-							<p>Puesta en real de las aplicaciones móviles para Android y iOS</p>
-							<div class="it">
-								<header>
-									<h4>Iteración 9</h4>
-								</header>
-							<p>Compilación de aplicaciones móviles para iphone y Android.</p>
-							</div>
-							<div class="it">
-								<header>
-									<h4>Fecha de entrega final</h4>
-								</header>
-							<p>07/06/2021</p>
-							</div>
-						</div>
-					</section>
-				</div>
 	
 		<!-- Footer -->
 		<footer id="footer">
