--- a/scrum.html
+++ b/scrum.html
@@ -357,7 +357,7 @@
 						</div>
 					</section>
 				</div>
-
+			</section>
 			<!-- Highlights SPRINT 1-->
 			<section class="wrapper" id="sprint1">
 				<div class="inner">
