--- a/scrum.html
+++ b/scrum.html
@@ -235,11 +235,17 @@
 							<li>Como usuario quiero que el sistema calcule el tiempo restante desde mi posición a un objetivo marcado  <p class="text-right">Prioridad: 4 - Puntos de historia: 13</p></li>
 							</ul>
 						</div>
-					<header class="special">
-						<h2>División en historias más pequeñas y tareas</h2>
-						<p>Algunas historias de usuario son demasiado grandes para ser desarrolladas en un único sprint, por lo que se dividieron en historias o tareas mas pequeñas</p>
-					</header>
 				</section>
+			</div>
+		</section>
+
+		<!-- User stories -->
+		<section class="wrapper" id="historias">
+			<div class="inner">
+				<header class="special">
+					<h2>División en historias más pequeñas y tareas</h2>
+					<p>Algunas historias de usuario son demasiado grandes para ser desarrolladas en un único sprint, por lo que se dividieron en historias o tareas mas pequeñas</p>
+				</header>
 			</div>
 		</section>
 
